--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -95,9 +95,9 @@ jobs:
 
       - name: Upload to App Store using altool
         env:
-          IPA_PATH: "build/ios/ipa/royo.ipa"
-          APPLE_ID: "lvningning198555@icloud.com"
-          APP_SPECIFIC_PASSWORD: "eibf-cwsx-rajv-ilwa"
+          IPA_PATH: "build/ios/ipa/habi.ipa"
+          APPLE_ID: "yff7742hn@163.com"
+          APP_SPECIFIC_PASSWORD: "nukf-yhim-lyms-uqvl"
         run: |
           xcrun altool --upload-app -f "$IPA_PATH" \
             -t ios \
